--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/tinker": "^2.0",
         "maatwebsite/excel": "^3.1",
         "tymon/jwt-auth": "dev-develop",
-        "fzaninotto/faker": "^1.9.1"
+        "fzaninotto/faker": "^1.9.1",
+        "barryvdh/laravel-dompdf": "^0.9.0"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
